--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".CalibrateActivity"
+            android:label="@string/app_name">
+        </activity>
+
         <service
             android:label="@string/app_name"
             android:name=".CheckNoiseService"
