--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".SettingsActivity">
+        </activity>
+
         <service
             android:label="@string/app_name"
             android:name=".CheckNoiseService"
