--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <activity android:name=".SettingsActivity">
         </activity>
 
+        <activity android:name=".SplMeterActivity">
+        </activity>
+
+
         <service
             android:label="@string/app_name"
             android:name=".CheckNoiseService"
