--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,13 @@
         <activity android:name=".SettingsActivity">
         </activity>
 
+        <activity android:name=".CalibrationActivity">
+            <intent-filter>
+                <action android:name="com.monsieurwave.earguard.activities.CalibrationActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
 
         <service
             android:label="@string/app_name"
