--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="monsieurwave.earguard">
+    package="monsieurwave.earguard"
+    android:installLocation="preferExternal">
 
     <application
         android:allowBackup="true"
